tests/positive/pr115_declare_terminator.safe
package pR115_Local_Decl_Terminator

   type counter is range 0 to 10;

   function compute returns counter

      var temp : counter = 1
      return temp


