tests/negative/neg_pr115_missing_declaration_semicolon.safe
package neg_PR115_Missing_Declaration_Semicolon

   value : integer = 0

   function broken returns integer
      return value;

